force-app/main/default/objects/Scratch_Org_Config__mdt/Scratch_Org_Config__mdt.object-meta.xml
<CustomObject>
    <description>GitHub dispatch configuration used to provision scratch orgs for Case requests.</description>
    <label>Scratch Org Config</label>
    <pluralLabel>Scratch Org Configs</pluralLabel>
</CustomObject>