force-app/main/default/objects/Scratch_Org_Config__mdt/fields/GitHub_Ref__c.field-meta.xml
<CustomField>
    <fullName>GitHub_Ref__c</fullName>
    <label>GitHub Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>