force-app/main/default/objects/Scratch_Org_Config__mdt/fields/GitHub_Token__c.field-meta.xml
<CustomField>
    <fullName>GitHub_Token__c</fullName>
    <label>GitHub Token</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>